# rick-and-morty-API

./: README.md  pyproject.toml  seed.py
app/: main.py  models.py  pyproject.toml
data/: characters.json
