[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.fastapi]
entrypoint = "app.main:app"

[project]
name = "rick-and-morty-API"
version = "0.1.0"
description = "API for rick and morty"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
dependencies = [
	"fastapi[standard]",
	"uvicorn",
	"sqlmodel",
	"dotenv",
]
authors = [
	{ name = "Hishamkhashman1", email = "hisham.khashman@gmail.com" },
]
